Inistantiated Berkshelf for cookbook development.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,19 @@ tmp
 .yardoc
 _yardoc
 doc/
+
+# Berkshelf
+.vagrant
+Berksfile.lock
+*~
+*#
+.*#
+\#*#
+.*.sw[a-z]
+*.un~
+/cookbooks
+
+# Bundler
+Gemfile.lock
+bin/*
+.bundle/*
